--- a/aboutus.html
+++ b/aboutus.html
@@ -75,15 +75,17 @@
       <div class="line"></div>
       <div class="line"></div>
     </div>
-    <div class="main_container index_container">
+    <div class="main_container aboutus_container">
       <div class="navbar">
         <div class="navbar">
           <a href="/index.html"
-            ><div id="index_icon" class="active_nav_icon">
-              <img src="/images/active_index_icon.svg" alt="" /></div
+            ><div id="index_icon">
+              <img src="/images/unactive_index_icon.svg" alt="" /></div
           ></a>
           <a href="/aboutus.html"
-            ><div id="aboutus_icon"><h1>[О НАС]</h1></div></a
+            ><div id="aboutus_icon" class="active_nav_icon">
+              <h1>[О НАС]</h1>
+            </div></a
           >
           <a href="/navigation.html"
             ><div id="navigation_icon"><h1>[НАВИГАЦИЯ]</h1></div>
@@ -93,6 +95,45 @@
           </a>
         </div>
       </div>
+      <div class="wind aboutus_wind_1">
+        <p>
+          Центра занимается восстановление экосистемы галактики и защитой
+          граждан от заражения и катастроф, вызванных ими. <br /><br />
+          «Чуксулуб» располагает огромными ресурсами, а его точки размещены на
+          всех особо значимых планетах.
+          <br /><br />
+          Наша миссия — восстановить природный баланса и порядок
+        </p>
+      </div>
+      <div class="wind aboutus_wind_2"></div>
+      <div class="wind aboutus_wind_3">
+        <div class="aboutus_wind_3_content_1">
+          <p>Расширения за 3386 год</p>
+          <br />
+          <div class="aboutus_wind_3_content_1_1">
+            <p>
+              исслед. центры<br /><br />
+              группы спасения<br /><br />
+              группа разведки<br /><br />
+              спасенные планеты<br /><br />
+              исследованные планеты <br /><br />заброшенные/погибшие планеты
+            </p>
+            <p>
+              13↑<br /><br />
+              34↑<br /><br />
+              45↓<br /><br />
+              5↓<br /><br /><br />
+              78↑<br /><br /><br />
+              14↓
+            </p>
+          </div>
+        </div>
+        <div class="aboutus_wind_2_content_2"></div>
+      </div>
+      <div class="wind aboutus_wind_4"></div>
+      <div class="wind aboutus_wind_5"></div>
+      <div class="wind aboutus_wind_6"></div>
+      <div class="wind aboutus_wind_7"></div>
     </div>
   </body>
 </html>
