--- a/aboutus.html
+++ b/aboutus.html
@@ -105,7 +105,12 @@
           Наша миссия — восстановить природный баланса и порядок
         </p>
       </div>
-      <div class="wind aboutus_wind_2"></div>
+      <div class="wind aboutus_wind_2">
+        <p>
+          Текущие планеты активного контроля: Е-261, Л-539, Ж-331, В-475, Ч-648,
+          З-739, Р-632, Т-484, У-955, Б-726
+        </p>
+      </div>
       <div class="wind aboutus_wind_3">
         <div class="aboutus_wind_3_content_1">
           <p>Расширения за 3386 год</p>
@@ -130,10 +135,78 @@
         </div>
         <div class="aboutus_wind_2_content_2"></div>
       </div>
-      <div class="wind aboutus_wind_4"></div>
-      <div class="wind aboutus_wind_5"></div>
-      <div class="wind aboutus_wind_6"></div>
-      <div class="wind aboutus_wind_7"></div>
+      <div class="wind aboutus_wind_4">
+        <div class="aboutus_wind_4_content_1">
+          <marquee behavior="scroll" direction="left"
+            ><h1>
+              последние новости планеты А-564: новая пустянная буря занесла
+              район №7
+            </h1></marquee
+          >
+        </div>
+        <div class="aboutus_wind_4_content_2">
+          <marquee
+            behavior="scroll"
+            direction="left"
+            scrolldelay="30"
+            truespeed="truespeed"
+            ><h1>
+              последние новости планеты А-564: новая пустянная буря занесла
+              район №7
+            </h1></marquee
+          >
+        </div>
+        <div class="aboutus_wind_4_content_3">
+          <marquee
+            behavior="scroll"
+            direction="left"
+            scrolldelay="50"
+            truespeed="truespeed"
+            ><h1>набор в волонтерскую группу закрыт</h1></marquee
+          >
+          <h1></h1>
+        </div>
+        <div class="aboutus_wind_4_content_4">
+          <marquee
+            behavior="scroll"
+            direction="left"
+            scrolldelay="30"
+            truespeed="truespeed"
+            ><h1>не забывайте при выходе взять с собой противогаз</h1></marquee
+          >
+        </div>
+      </div>
+      <div class="wind aboutus_wind_5">
+        <div class="aboutus_wind_5_content_1">
+          <h3>
+            Опасное <br />
+            цветение
+          </h3>
+        </div>
+        <div class="aboutus_wind_5_content_2"><h3>Вход запрещен</h3></div>
+      </div>
+      <div class="wind aboutus_wind_6">
+        <div class="aboutus_wind_6_content">
+          <div class="aboutus_wind_6_content_1"></div>
+          <div class="aboutus_wind_6_content_2">
+            <div class="aboutus_wind_6_content_2_1">
+              <p>Администратор О-009</p>
+              <br />
+            </div>
+            <h3>
+              В новое производство ядерной энергии для ракетных двигателей
+              требуется помощник
+            </h3>
+          </div>
+        </div>
+      </div>
+      <div class="wind aboutus_wind_7">
+        <div class="aboutus_wind_7_content">
+          <h1>«</h1>
+          <p>Лабораторный <br />работник №1</p>
+          <h1>»</h1>
+        </div>
+      </div>
     </div>
   </body>
 </html>
