--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Информационный сайт центра космической экологии Чуксулуб</title>
   </head>
   <body>
+    <script src="scripts/pop_up.js"></script>
     <div class="bad_signal_top_img"></div>
     <div class="top_lines">
       <div class="line"></div>
@@ -117,8 +118,8 @@
           reader.readLine()); } return arrayList;
         </h1>
       </div>
-      <div class="pop_up index_pop_up_1">
-        <div class="pop_up_name">
+      <!-- <div class="pop_up index_pop_up_1" id="index_pop_up_1">
+        <div class="pop_up_name" id="index_pop_up_1_header">
           <h2>О ЦЕНТРЕ</h2>
           <img src="/images/close_icon.svg" alt="" />
         </div>
@@ -253,7 +254,7 @@
         <div class="pop_up_content index_pop_up_7_content">
           <div class="index_pop_up_7_content_img"></div>
         </div>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
