--- a/navigation.html
+++ b/navigation.html
@@ -7,6 +7,29 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- <div class="goout_page goout_navig_space">
+      <div class="goout_alert">
+        <h1>
+          Вы уверены, что хотите перейти на страницу ‎«‎полная карта
+          вселенной‎»?
+        </h1>
+        <div class="goout_buttons">
+          <button><p>Да</p></button>
+          <button><p>Нет</p></button>
+        </div>
+      </div>
+    </div> -->
+    <!-- <div class="goout_page goout_navig_book">
+      <div class="goout_alert">
+        <h1>
+          Вы уверены, что хотите перейти на страницу ‎«‎путеводитель №28‎»?
+        </h1>
+        <div class="goout_buttons">
+          <button><p>Да</p></button>
+          <button><p>Нет</p></button>
+        </div>
+      </div>
+    </div> -->
     <div class="bad_signal_top_img"></div>
     <div class="top_lines">
       <div class="line"></div>
@@ -131,6 +154,16 @@
         <button><p>узнать подробнее</p></button>
       </div>
       <div class="wind navig_wind_5"></div>
+      <!-- <div class="pop_up about_pop_up_1">
+        <div class="pop_up_name">
+          <h2>предупреждающие плакаты</h2>
+          <img src="/images/close_icon.svg" alt="" />
+        </div>
+        <div class="pop_up_content about_pop_up_1_content">
+          <div class="about_pop_up_1_content_1"></div>
+          <div class="about_pop_up_1_content_2"></div>
+        </div>
+      </div> -->
     </div>
   </body>
 </html>
