--- a/services.html
+++ b/services.html
@@ -119,8 +119,31 @@
           />
         </div>
         <div class="services_wind_3_content_2">
-          <div class="services_wind_3_content_2_1"></div>
-          <div class="services_wind_3_content_2_2"></div>
+          <div class="services_wind_3_content_2_1">
+            <p>ФИО Предводителя группы</p>
+            <input
+              type="text"
+              name="FIO"
+              id="form_FIO"
+              placeholder="Алексей Алексеевич Алексенов"
+            />
+          </div>
+          <div class="services_wind_3_content_2_2">
+            <p>Звездная система</p>
+            <input
+              type="text"
+              name="FIO"
+              id="form_FIO"
+              placeholder="Альфа центавра"
+            />
+          </div>
+          <div class="services_wind_3_content_2_3">
+            <p>Планета</p>
+            <input type="text" name="FIO" id="form_FIO" placeholder="О-009" />
+          </div>
+          <button type="button" id="sendApplication">
+            <p>Отправить заявку</p>
+          </button>
         </div>
       </div>
     </div>
