--- a/aboutus.html
+++ b/aboutus.html
@@ -94,12 +94,14 @@
             ><div id="services_icon"><h1>[УСЛУГИ]</h1></div>
           </a>
         </div>
-        <div class="navbar_mobile">
-          <a href="/index.html"
-            ><div id="index_icon_mob">
-              <img src="/images/unactive_index_icon.svg" alt="" /></div
-          ></a>
-        </div>
+      </div>
+      <div class="index_icon_mob">
+        <img src="/images/active_index_icon.svg" alt="" />
+      </div>
+      <div class="page_number_mob_activenot">
+        <h1>«</h1>
+        <h1>Услуги</h1>
+        <h1>»</h1>
       </div>
       <div class="wind aboutus_wind_1" id="aboutus_wind_1_i">
         <p>
@@ -198,7 +200,6 @@
           <div class="aboutus_wind_6_content_2">
             <div class="aboutus_wind_6_content_2_1">
               <p>Администратор О-009</p>
-              <br />
             </div>
             <h3>
               В новое производство ядерной энергии для ракетных двигателей
