--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
           ><div id="services_icon"><h1>[УСЛУГИ]</h1></div>
         </a>
       </div>
+      <div class="index_icon_mob">
+        <img src="/images/active_index_icon.svg" alt="" />
+      </div>
+
+      <div class="page_number_mob_activenot">
+        <h1>«</h1>
+        <h1>Услуги</h1>
+        <h1>»</h1>
+      </div>
       <div class="wind index_wind_1"></div>
       <div class="wind index_wind_2">
         <p>
@@ -112,10 +121,10 @@
           public static ArrayList inputListStrings() throws IOException {
         </h1>
         <h1 style="text-indent: 15vw">
-          BufferedReader reader = new BufferedReader(new
-          InputStreamReader(System.in)); ArrayList arrayList = new
-          ArrayList<>(); for (int i = 0; i < 10; i++) { arrayList.add(i,
-          reader.readLine()); } return arrayList;
+          BufferedReader reader = new Buffered Reader(new Input Stream
+          Reader(System.in)); Array List arrayList = new ArrayList<>(); for (int
+          i = 0; i < 10; i++) { arrayList. add(i, reader. readLine()); } return
+          arrayList;
         </h1>
       </div>
       <!-- <div class="pop_up index_pop_up_1" id="index_pop_up_1">
@@ -145,8 +154,8 @@
             исследовательского центра служба спасения - приезжает
           </p>
         </div>
-      </div>
-      <div class="pop_up index_pop_up_2">
+      </div> -->
+      <!-- <div class="pop_up index_pop_up_2">
         <div class="pop_up_name">
           <h2>Статистика</h2>
           <img src="/images/close_icon.svg" alt="" />
